--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,21 +59,19 @@ jobs:
         run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
 
       - name: build and test
-        env: 
-          MOBB_DATA: ${{ vars.MOBB_DATA }}  
         run: |
           az acr login --name ngmssboxjediacr
           
           (cd ${PWD}/${BUNDLE} && ln -sfT /testdata/model-interface-data)
 
-          docker run --rm \
-            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
-            --workdir=/usr/local/src/${REPO}/${BUNDLE} \
-            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
-            --volume ${{ runner.tool_cache }}/model-interface-data:/var/tmp/model-interface-data \
-            'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
-          && cd ${{ github.workspace }} \
-          && rm -fr ${{ env.BUNDLE }}
+          # docker run --rm \
+          #   --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
+          #   --workdir=/usr/local/src/${REPO}/${BUNDLE} \
+          #   --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
+          #   --volume ${{ runner.tool_cache }}/model-interface-data:/var/tmp/model-interface-data \
+          #   'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
+          # && cd ${{ github.workspace }} \
+          # && rm -fr ${{ env.BUNDLE }}
 
   build2:
     if: '! github.event.pull_request.draft'
