run with test data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,15 +53,13 @@ jobs:
           az acr login --name ngmssboxjediacr
           ln -sfT /testdata/model-interface-data ${MOBB_DATA}
           export LFRICLITE_DATA_REP_DIR=${MOBB_DATA}/lfric-lite/Data
-          ls $LFRICLITE_DATA_REP_DIR
-
-          # docker run --rm \
-          #   --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
-          #   --workdir=/usr/local/src/${REPO}/${BUNDLE} \
-          #   --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \          
-          #   'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
-          # && cd ${{ github.workspace }} \
-          # && rm -fr ${{ env.BUNDLE }}
+          docker run --rm \
+            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
+            --workdir=/usr/local/src/${REPO}/${BUNDLE} \
+            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \          
+            'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
+          && cd ${{ github.workspace }} \
+          && rm -fr ${{ env.BUNDLE }}
 
   build2:
     if: '! github.event.pull_request.draft'
