--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,10 @@ jobs:
           MOBB_DATA: ${{ github.workspace }}/${{ env.BUNDLE }}/MOBB_DATA
         run: |
           az acr login --name ngmssboxjediacr
+          
           ln -sfT /testdata/model-interface-data ${MOBB_DATA}
-          export LFRICLITE_DATA_REP_DIR=${MOBB_DATA}/lfric-lite/Data
+          export LFRICLITE_DATA_REP_DIR="${MOBB_DATA}/lfric-lite/Data"
+
           docker run --rm \
             --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
             --workdir=/usr/local/src/${REPO}/${BUNDLE} \
