--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,9 +59,9 @@ jobs:
             --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
             --workdir=/usr/local/src/${REPO}/${BUNDLE} \
             --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \          
-            'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
-          && cd ${{ github.workspace }} \
-          && rm -fr ${{ env.BUNDLE }}
+            'ngmssboxjediacr.azurecr.io/jedibase:alma9'
+          # && cd ${{ github.workspace }} \
+          # && rm -fr ${{ env.BUNDLE }}
 
   build2:
     if: '! github.event.pull_request.draft'
