remove white space

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,12 +53,12 @@ jobs:
           az acr login --name ngmssboxjediacr
           
           ln -sfT /testdata/model-interface-data ${MOBB_DATA}
-          # export LFRICLITE_DATA_REP_DIR="${MOBB_DATA}/lfric-lite/Data"
+          export LFRICLITE_DATA_REP_DIR="${MOBB_DATA}/lfric-lite/Data"
 
           docker run --rm \
             --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
             --workdir=/usr/local/src/${REPO}/${BUNDLE} \
-            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \          
+            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
             'ngmssboxjediacr.azurecr.io/jedibase:alma9'
 
   build2:
