--- a/test/testinput/state_full.yaml
+++ b/test/testinput/state_full.yaml
@@ -2,7 +2,8 @@ parameters:
   fieldMetadata:
     exner:                    exner,                    exner,                    exner_levels_minus_one, 1,    70, false
     grid_surface_temperature: grid_surface_temperature, grid_surface_temperature, skin_temperature,       K,    1,  false
-    theta:                    theta,                    theta,                    potential_temperature,  K,    71, false
+    pressure_in_wth:          pressure_in_wth,          pressure_in_wth,          air_presssure,          Pa,   71, false
+    theta:                    theta,                    theta,                    potential_temperature,  K,    71, true
     u_in_w3:                  u_in_w3,                  u_in_w3,                  eastward_wind,          ms-1, 70, false
     v_in_w3:                  v_in_w3,                  v_in_w3,                  northward_wind,         ms-1, 70, false
   gridName: CS-LFR-224
