--- a/ci/CMakeLists.txt
+++ b/ci/CMakeLists.txt
@@ -1,3 +1,12 @@
+###############################################################################
+# MONIO - Met Office NetCDF Input Output                                      #
+#                                                                             #
+# (C) Crown Copyright 2023, Met Office. All rights reserved.                  #
+#                                                                             #
+# This software is licensed under the terms of the 3-Clause BSD License       #
+# which can be obtained from https://opensource.org/license/bsd-3-clause/.    #
+###############################################################################
+
 cmake_minimum_required( VERSION 3.20 FATAL_ERROR )
 
 project( monio-ci VERSION 0.0.1 LANGUAGES C CXX Fortran )
