Improve external test data location symlink logic
Recognise MOBB_DATA.
Can read location from CMake variable or environment variable.
Fatal error if location is not an existing directory.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,11 +14,34 @@ message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 
 file( MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/DataOut )
 
-# Currently repurpose data environment variable from LFRic-Lite
-set(LFRICLITE_DATA_REP_DIR "$ENV{LFRICLITE_DATA_REP_DIR}")
-execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-                        ${LFRICLITE_DATA_REP_DIR}
-                        ${CMAKE_CURRENT_BINARY_DIR}/Data)
+if(NOT DEFINED MONIO_TESTFILES_DIR)
+  if(DEFINED ENV{MONIO_TESTFILES_DIR})
+    set(MONIO_TESTFILES_DIR "$ENV{MONIO_TESTFILES_DIR}")
+  elseif(DEFINED ENV{LFRICLITE_DATA_REP_DIR})  # back compat
+    set(MONIO_TESTFILES_DIR "$ENV{LFRICLITE_DATA_REP_DIR}")
+  elseif(DEFINED MOBB_DATA)
+    set(MONIO_TESTFILES_DIR "${MOBB_DATA}/monio" )
+  elseif(DEFINED ENV{MOBB_DATA})
+    set(MONIO_TESTFILES_DIR "$ENV{MOBB_DATA}/monio" )
+  endif()
+endif()
+if(IS_DIRECTORY "${MONIO_TESTFILES_DIR}/Data")
+  set(MONIO_TESTFILES_DIR "${MONIO_TESTFILES_DIR}/Data" )
+endif()
+if(IS_DIRECTORY "${MONIO_TESTFILES_DIR}")
+  message(STATUS "MONIO_TESTFILES_DIR=${MONIO_TESTFILES_DIR}")
+  if(IS_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Data")
+    file(REMOVE_RECURSE "${CMAKE_CURRENT_BINARY_DIR}/Data")
+  endif()
+  file(
+    CREATE_LINK
+    "${MONIO_TESTFILES_DIR}"
+    "${CMAKE_CURRENT_BINARY_DIR}/Data"
+    SYMBOLIC
+  )
+else()
+  message(FATAL_ERROR "MONIO_TESTFILES_DIR=${MONIO_TESTFILES_DIR}: no such directory")
+endif()
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testinput)
 list(APPEND monio_testinput
