--- a/test/testinput/fieldset_write.yaml
+++ b/test/testinput/fieldset_write.yaml
@@ -1,10 +1,11 @@
 parameters:
   fieldMetadata:
-    exner:                    exner,                    exner_levels_minus_one, exner_levels_minus_one, 1,    70, false
-    grid_surface_temperature: grid_surface_temperature, skin_temperature,       skin_temperature,       K,    1,  false
-    theta:                    theta,                    potential_temperature,  potential_temperature,  K,    71, true
-    u_in_w3:                  u_in_w3,                  eastward_wind,          eastward_wind,          ms-1, 70, false
-    v_in_w3:                  v_in_w3,                  northward_wind,         northward_wind,         ms-1, 70, false
+    exner:                    exner,                    exner_levels_minus_one, exner_levels_minus_one, half_levels, half_levels,         1,    70, false
+    grid_surface_temperature: grid_surface_temperature, skin_temperature,       skin_temperature,       Mesh2d_face, Mesh2d_face,         K,    1,  false
+    pressure_in_wth:          pressure_in_wth,          pressure_in_wth,        air_presssure,          full_levels, full_levels_no_surf, Pa,   71, false
+    theta:                    theta,                    potential_temperature,  potential_temperature,  full_levels, full_levels_no_surf, K,    71, true
+    u_in_w3:                  u_in_w3,                  eastward_wind,          eastward_wind,          half_levels, half_levels,         ms-1, 70, false
+    v_in_w3:                  v_in_w3,                  northward_wind,         northward_wind,         half_levels, half_levels,         ms-1, 70, false
   gridName: CS-LFR-48
   partitionerType: cubedsphere
   meshType: cubedsphere_dual
