--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,97 +1,54 @@
+# ci.yml
 ---
 name: CI
 
 on:
+  push:
+    branches: [develop]
   pull_request:
     branches: [develop]
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/develop' }}
 
 env:
   REPO: ${{ github.event.repository.name }}
   BUNDLE: pr-${{ github.event.number }}  
 
-jobs:  
+jobs:
   build1:
     if: github.repository_owner == 'MetOffice'
-    name: gnu 11.3.1 (UKMO)    
-    runs-on: jedi-self-hosted-rg
-
-    steps:          
-      - name: pre-submit cleanup
-        run: |
-          ls -la ./
-          rm -fr ./${{ env.BUNDLE }} || true
-          ls -la ./
-      - name: checkout current
-        uses: actions/checkout@v4
-        with:
-          path: ./${{ env.BUNDLE }}/${{ env.REPO }}
-      - name: initiate bundle
-        run: cp ./${{ env.BUNDLE }}/${{ env.REPO }}/ci/* ./${{ env.BUNDLE }}/
-
-      - name: checkout jedicmake
-        uses: actions/checkout@v4
-        with:
-          path: ./${{ env.BUNDLE }}/jedicmake
-          repository: JCSDA-internal/jedi-cmake
-          submodules: true
-          token: ${{ secrets.GH_PAT }}
-
-      - name: checkout oops
-        uses: actions/checkout@v4
-        with:
-          path: ./${{ env.BUNDLE }}/oops
-          repository: JCSDA-internal/oops
-          token: ${{ secrets.GH_PAT }}
-      - name: matching branch checkout attempt oops ${{ github.head_ref }}
-        if: github.event_name == 'pull_request'
-        run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
-
-      - name: build and test
-        env:
-          MOBB_DATA: ${{ github.workspace }}/MOBB_DATA
-        run: |
-          az acr login --name ngmssboxjediacr          
-          ln -sfT /testdata/model-interface-data ${MOBB_DATA}
-          docker run --rm \
-            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
-            --workdir=/usr/local/src/${REPO}/${BUNDLE} \
-            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
-            --volume ${MOBB_DATA}:/var/tmp/MOBB_DATA \
-            'ngmssboxjediacr.azurecr.io/jedibase:alma9' \
-          && rm -fr ${{ github.workspace }}/${{ env.BUNDLE }}
-
-  build2:
-    if: '! github.event.pull_request.draft'
-    name: gnu 9.4.0 (JCSDA)    
+    name: gnu-openmpi (JCSDA)
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout current
+      - name: Checkout current
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/${{ env.REPO }}
       - name: initiate bundle
         run: cp ./${{ env.BUNDLE }}/${{ env.REPO }}/ci/* ./${{ env.BUNDLE }}/
 
-      - name: checkout jedicmake
+      - name: Checkout jedicmake
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/jedicmake
           repository: JCSDA-internal/jedi-cmake
-          submodules: true
+          submodules: recursive
           token: ${{ secrets.GH_PAT }}
 
-      - name: checkout oops
+      - name: Checkout oops
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/oops
           repository: JCSDA-internal/oops
           token: ${{ secrets.GH_PAT }}
-      - name: matching branch checkout attempt oops ${{ github.head_ref }}
+      - name: Checkout attempt for oops@${{ github.head_ref }}
         if: github.event_name == 'pull_request'
         run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
 
-      - name: build and lint
+      - name: Build and Lint
         run: |
           docker run --rm \
             --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-lint \
@@ -99,38 +56,38 @@ jobs:
             --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
             'jcsda/docker-gnu-openmpi-dev:latest'
 
-  build3:
-    if: '! github.event.pull_request.draft'
-    name: clang 10.0.0 (JCSDA)    
+  build2:
+    if: github.repository_owner == 'MetOffice'
+    name: clang-mpich (JCSDA)
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout current
+      - name: Checkout current
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/${{ env.REPO }}
       - name: initiate bundle
         run: cp ./${{ env.BUNDLE }}/${{ env.REPO }}/ci/* ./${{ env.BUNDLE }}/
 
-      - name: checkout jedicmake
+      - name: Checkout jedicmake
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/jedicmake
           repository: JCSDA-internal/jedi-cmake
-          submodules: true
+          submodules: recursive
           token: ${{ secrets.GH_PAT }}
 
-      - name: checkout oops
+      - name: Checkout oops
         uses: actions/checkout@v4
         with:
           path: ./${{ env.BUNDLE }}/oops
           repository: JCSDA-internal/oops
           token: ${{ secrets.GH_PAT }}
-      - name: matching branch checkout attempt oops ${{ github.head_ref }}
+      - name: Checkout attempt for oops@${{ github.head_ref }}}
         if: github.event_name == 'pull_request'
         run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
 
-      - name: build and lint
+      - name: Build and Lint
         run: |
           docker run --rm \
             --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-lint \
